# aurguard-project

./: .gitignore  Cargo.toml  LICENSE  README.md  TASKS.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
docs/: SECURITY-ROADMAP.md  index.html
npm/: README.md  install.js  package.json
rules.d/: community.toml
src/: astscan.rs  aur.rs  config.rs  decode.rs  diff.rs  i18n.rs  installer.rs  ioc.rs  lib.rs  main.rs  normalize.rs  pkgbuild.rs  report.rs  rules.rs  ruleset.rs  srcscan.rs  taint.rs  ui.rs  vt.rs  wizard.rs
tests/: integration.rs
