[package]
name = "aurguard"
version = "1.5.0"
edition = "2021"
rust-version = "1.86"
description = "AUR package security guard — analyze before you install."
authors = ["aurguard contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lunanoir21/aurguard-project"
homepage = "https://github.com/lunanoir21/aurguard-project"
keywords = ["aur", "arch", "linux", "security", "pacman"]
categories = ["command-line-utilities"]
exclude = ["npm/", ".github/", "TASKS.md"]

[lib]
name = "aurguard"
path = "src/lib.rs"

[[bin]]
name = "aurguard"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
colored = "3"
indicatif = "0.18"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
anyhow = "1"
dirs = "6"
sha2 = "0.11"
is-terminal = "0.4"
tree-sitter = "0.25"
tree-sitter-bash = "0.25"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
